--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,11 @@ header {
 }
 
 @media (max-width: 768px) {
+  header {
+    text-align: center;
+    /* 텍스트 정렬을 왼쪽으로 변경 */
+  }
+
   body {
     background-image: none;
     /* 모바일 화면에서는 배경 이미지를 표시하지 않음 */
@@ -121,6 +126,11 @@ header {
     /* 로고 여백을 줄임 */
   }
 
+  .logo img {
+    height: 70px;
+    /* 로고 이미지 크기를 100px로 조정 */
+  }
+
   .choose-language {
     font-size: 30px;
     /* 언어 선택 폰트 크기를 줄임 */
@@ -128,17 +138,25 @@ header {
     /* 상단 여백을 조정 */
   }
 
+  .menu-container {
+    flex-direction: column;
+    /* 모바일 화면에서 메뉴를 세로로 배치 */
+  }
+
   .menu-item {
     flex: 1 1 auto;
     /* 메뉴 항목 크기를 조정 */
     margin: 2px 0;
     /* 메뉴 간 여백을 조정 */
+    padding-bottom: 0px;
+    padding-top: 0px;
   }
 
   .menu-box {
     height: 130px;
     /* 메뉴 상자의 높이를 조정 */
     padding: 10px;
+    padding-bottom: 0px;
     /* 내부 패딩을 조정하여 내용을 중앙 정렬 */
   }
 
